--- a/index.html
+++ b/index.html
@@ -504,18 +504,28 @@
 ]
 },
 
-
-
     {
-        title: 'Riverside',
-        cover: 'images/pics/riverside/cover.jpg',
+        title: 'Sundarijal Hike',
+        cover: 'images/pics/sundarijal/1 (2).jpg',
         photos: [
 
-{ src: 'images/pics/riverside/cover.jpg'},
-{ src: 'images/pics/riverside/1 (1).jpg',caption: 'Riverrr'}
+{ src: 'images/pics/sundarijal/1 (2).jpg'},
+{ src: 'images/pics/sundarijal/1 (1).jpg',caption: 'Mandir'},
+{ src: 'images/pics/sundarijal/1 (3).jpg',caption: 'Dam'},
+{ src: 'images/pics/sundarijal/1 (4).jpg'},
+{ src: 'images/pics/sundarijal/1 (13).jpg'},
+{ src: 'images/pics/sundarijal/1 (5).jpg'},
+{ src: 'images/pics/sundarijal/1 (6).jpg'},
+{ src: 'images/pics/sundarijal/1 (7).jpg'},
+{ src: 'images/pics/sundarijal/1 (8).jpg'},
+{ src: 'images/pics/sundarijal/1 (9).jpg'},
+{ src: 'images/pics/sundarijal/1 (10).jpg'},
+{ src: 'images/pics/sundarijal/1 (11).jpg'},
+{ src: 'images/pics/sundarijal/1 (12).jpg'}
+
+
 ]
 },
-
 
 
 
@@ -543,6 +553,22 @@
 
         ]
       },
+
+
+
+
+
+   {
+        title: 'Riverside',
+        cover: 'images/pics/riverside/cover.jpg',
+        photos: [
+
+{ src: 'images/pics/riverside/cover.jpg'},
+{ src: 'images/pics/riverside/1 (1).jpg',caption: 'Riverrr'}
+]
+},
+
+
 
 
 
